apps/synapse-proxy/components/tls/patch-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: synapse-proxy
spec:
  template:
    spec:
      containers:
        - name: caddy
          ports:
            - name: https
              containerPort: 8448
          readinessProbe:
            tcpSocket:
              port: https
          livenessProbe:
            tcpSocket:
              port: https
          startupProbe:
            tcpSocket:
              port: https
          volumeMounts:
            - name: tls
              mountPath: /etc/ssl/private
              readOnly: true
      volumes:
        - name: tls
          secret:
            secretName: synapse-proxy-tls
            items:
              - key: tls.crt
                path: tls.crt
              - key: tls.key
                path: tls.key
                mode: 0640
