apps/synapse-proxy/components/tls/patch-sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: synapse-proxy
spec:
  template:
    spec:
      containers:
        - name: caddy
          livenessProbe:
            tcpSocket:
              port: https
          ports:
            - name: https
              containerPort: 8448
          readinessProbe:
            tcpSocket:
              port: https
          startupProbe:
            tcpSocket:
              port: https
          volumeMounts:
            - name: tls
              mountPath: /etc/ssl/private
              readOnly: true
      volumes:
        - name: tls
          secret:
            items:
              - key: tls.crt
                path: tls.crt
              - key: tls.key
                mode: 640
                path: tls.key
            secretName: synapse-proxy-tls
