apps/synapse-proxy/components/tls/patch-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: synapse-proxy
spec:
  ports:
    - name: https
      port: 8448
      targetPort: https
