apps/synapse-proxy/components/tls/patch-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: matrix
spec:
  defaultBackend:
    service:
      name: synapse-proxy
      port:
        name: https
